Ensure all items in properties grid align correctly

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1039,7 +1039,8 @@ label > input[type='checkbox'].toggle {
 	padding-left: 1.5rem;
 }
 
-.data-grid .label {
+.data-grid > .label {
+	display: block;
 	min-height: 2.25rem;
 	padding: 0.5rem 0;
 }
@@ -1048,6 +1049,7 @@ label > input[type='checkbox'].toggle {
 	align-content: center;
 	background-color: var(--form-control-background);
 	border-radius: 4px;
+	display: block;
 	font-weight: 500;
 	padding: 0.375rem;
 }
